--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "image-size": "^0.8.3",
+    "arg": "^4.1.3",
+    "colors": "^1.4.0",
     "jimp": "^0.12.1",
     "prompts": "^2.3.2",
-    "yargs": "^15.3.1"
+    "rimraf": "^3.0.2"
   },
   "scripts": {
     "test": "jest"
