--- a/cli/package.json
+++ b/cli/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "multitile-emoji",
-  "version": "1.0.0",
-  "main": "index.js",
+  "name": "multitile-emoji-cli",
+  "version": "0.1.0",
+  "main": "entry.js",
   "license": "MIT",
   "dependencies": {
     "arg": "^4.1.3",
@@ -11,6 +11,7 @@
     "rimraf": "^3.0.2"
   },
   "scripts": {
+    "clean": "rm -rf ./node_modules && rm yarn-error.log",
     "test": "jest"
   },
   "devDependencies": {
